@@ -72,6 +72,8 @@ Version 1.4.6 - CVS
     extension, fixes are not applied.
   - Rebuild URL to sound file in newmail plugin when sound file is played
     (#1233530).
+  - Removed 'Download this as file' link from printable email version and
+    translate plugin.
 
 Version 1.4.5 - 13 July 2005
 ----------------------------
